--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h2>Меню на главной</h2>
+    <ul>
+        <li> <a href="C:\Users\user\Desktop\Ирочка\обучение\2 урок 11.11.2025\Практика к уроку 2\page2.html">Каталог p2 </a> </li>                      </li>
+        <li> <a href="C:\Users\user\Desktop\Ирочка\обучение\2 урок 11.11.2025\Практика к уроку 2\page3.html">Контакты p3 </a></a></li>
+    </ul>
+    <h2>Рейтинг еды</h2>
+     <table>
+        <tr> <td>Номер</td> <td>Наименование</td> <td>Рейтинг</td></tr>
+        <tr> <td>1</td> <td>Том Ям</td> <td>1</td></tr>
+        <tr> <td>2</td> <td>Цезарь</td> <td>2</td></tr>
+        <tr> <td>3</td> <td>Курица терияки</td> <td>3</td></tr>
+        <tr> <td>4</td> <td>Чизкейк</td> <td>4</td></tr>
+</table>
+</body>
+</html>
