--- a/page3.html
+++ b/page3.html
@@ -8,8 +8,8 @@
 <body>
   <h2>Меню Контакты p3</h2>
     <ul>
-        <li><a href="C:\Users\user\Desktop\Ирочка\обучение\2 урок 11.11.2025\Практика к уроку 2\page2.html"> Каталог p2 </a></li>
-        <li><a href="C:\Users\user\Desktop\Ирочка\обучение\2 урок 11.11.2025\Практика к уроку 2\index.html"> На главную</a></li>
+        <li><a href="page2.html"> Каталог p2 </a></li>
+        <li><a href="index.html"> На главную</a></li>
     </ul> 
     <h2>Список продуктов</h2>
     <ol>
@@ -30,4 +30,5 @@
         <li>88480000000</li>
     </ol>  
 </body>
+
 </html>
