--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h2>Меню на главной</h2>
     <ul>
-        <li> <a href="C:\Users\user\Desktop\Ирочка\обучение\2 урок 11.11.2025\Практика к уроку 2\page2.html">Каталог p2 </a> </li>                      </li>
-        <li> <a href="C:\Users\user\Desktop\Ирочка\обучение\2 урок 11.11.2025\Практика к уроку 2\page3.html">Контакты p3 </a></a></li>
+        <li> <a href="page2.html">Каталог p2 </a> </li>                      </li>
+        <li> <a href="page3.html">Контакты p3 </a></a></li>
     </ul>
     <h2>Рейтинг еды</h2>
      <table>
@@ -20,4 +20,5 @@
         <tr> <td>4</td> <td>Чизкейк</td> <td>4</td></tr>
 </table>
 </body>
+
 </html>
