--- a/page2.html
+++ b/page2.html
@@ -9,10 +9,11 @@
   <h2>Меню Каталог p2</h2>
     <ul>
         <li><a href="index.html">На главную</a></li>
-        <li><a href="C:\Users\user\Desktop\Ирочка\обучение\2 урок 11.11.2025\Практика к уроку 2\page3.html">Контакты p3 </a></li>
+        <li><a href="page3.html">Контакты p3 </a></li>
     </ul>  
     <img src ='ТЯ.jpg'height='100px'>
     <img src ='К.jpg'height='100px'>
     <img src ='Ч.jpeg'height='100px'>
 </body>
+
 </html>
